--- a/SatoshiMinesBot/packages.config
+++ b/SatoshiMinesBot/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net452" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.2.1.750" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.104.0" targetFramework="net452" />
 </packages>
